--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,7 +77,7 @@ jobs:
         if: github.event.inputs.branches != ''
         id: read-cache
         run: |
-          branch_info=$(jq -r '.${{ asc_branch_name }}' ${{ env.BRANCH_JSON }})
+          branch_info=$(jq -r '.$asc_branch_name' ${{ env.BRANCH_JSON }})
           if [ -n "$branch_info" ]; then
             branch_name=$(echo "$branch_info" | jq -r '.branch_name')
             echo "branch_name=${branch_name}" >> $GITHUB_OUTPUT
