--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,10 +15,10 @@ on:
         default: dev
 
 jobs:
-  multiple-branches:
-    uses: ./.github/workflows/branch/cache-branch.yml
-    with:
-      branches: ${{ github.event.inputs.branches  }}
+#  multiple-branches:
+#    uses: ./.github/workflows/branch/cache-branch.yml
+#    with:
+#      branches: ${{ github.event.inputs.branches  }}
   #    outputs:
 #      TMP_BRANCH_NAME: ${{ steps.final-branch-name.outputs.final_branch_name }}
 #    env:
