--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -206,17 +206,16 @@ jobs:
           branches: ${{ github.event.inputs.branches  }}
           final-branch-name: ${{ github.event.inputs.branches  }}
 
-
-      - name: Check Out Target Branch
-        run: |
-          if [ "${{ steps.branch-name.outputs.final_branch_name }}" == '' ]; then
-            git_hash=$(git rev-parse --short HEAD)
-            echo "GIT_SHORT_SHA=$git_hash" >> $GITHUB_ENV
-            echo "GIT_BRANCH=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
-            echo "one branch ${GITHUB_REF#refs/heads/}"
-          else
-            git_hash=$(git rev-parse --short origin/${{ env.steps.branch-merge.outputs. }})
-            echo "GIT_SHORT_SHA=$git_hash" >> $GITHUB_ENV
-            echo "GIT_BRANCH=${{ env.TMP_BRANCH_NAME }}" >> $GITHUB_ENV
-            echo "multiple branch ${{ env.TMP_BRANCH_NAME }}"
-          fi
+#      - name: Check Out Target Branch
+#        run: |
+#          if [ "${{ steps.branch-name.outputs.final_branch_name }}" == '' ]; then
+#            git_hash=$(git rev-parse --short HEAD)
+#            echo "GIT_SHORT_SHA=$git_hash" >> $GITHUB_ENV
+#            echo "GIT_BRANCH=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
+#            echo "one branch ${GITHUB_REF#refs/heads/}"
+#          else
+#            git_hash=$(git rev-parse --short origin/${{ env.steps.branch-merge.outputs. }})
+#            echo "GIT_SHORT_SHA=$git_hash" >> $GITHUB_ENV
+#            echo "GIT_BRANCH=${{ env.TMP_BRANCH_NAME }}" >> $GITHUB_ENV
+#            echo "multiple branch ${{ env.TMP_BRANCH_NAME }}"
+#          fi
