--- a/.github/workflows/cache-branch.yml
+++ b/.github/workflows/cache-branch.yml
@@ -120,7 +120,9 @@ jobs:
           if [ ${{ inputs.branches }} == '' ]; then
             echo "not need merge"
             echo "final_branch_name=" >> "$GITHUB_OUTPUT"
+            echo "${{ env.final_branch_name }}" > branch_info.txt
           else
             echo "branch name: ${{ env.final_branch_name }}"
             echo "final_branch_name=${{ env.final_branch_name }}" >> "$GITHUB_OUTPUT"
+            echo "${{ env.final_branch_name }}" > branch_info.txt
           fi
