--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,10 +16,10 @@ on:
 
 
 jobs:
-  multiple-branches:
-    uses: ./.github/workflows/cache-branch.yml
-    with:
-      branches: ${{ github.event.inputs.branches  }}
+#  multiple-branches:
+#    uses: ./.github/workflows/cache-branch.yml
+#    with:
+#      branches: ${{ github.event.inputs.branches  }}
 #    outputs:
 #      TMP_BRANCH_NAME: ${{ jobs.multiple-branches.outputs.TMP_BRANCH_NAME }}
 
@@ -183,47 +183,24 @@ jobs:
 #          echo "You should resolve conflicts and commit then push it."
 #          echo "git push origin ${{ env.TMP_BRANCH_NAME }}"
 #          exit 1
-  set-env:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Write commit hash to file
-        run: echo "${GITHUB_SHA}" > commit_hash.txt
-
-  use-env:
-    runs-on: ubuntu-latest
-    needs: set-env
-    steps:
-      - name: Checkout code again
-        uses: actions/checkout@v3
-
-      - name: Read commit hash from file
-        run: |
-          COMMIT_HASH=$(cat commit_hash.txt)
-          echo "The commit hash is: $COMMIT_HASH"
 
   build-run:
-    needs: multiple-branches
+#    needs: multiple-branches
     env:
       TMP_BRANCH_NAME: $(cat branch_info.txt)
     runs-on: ubuntu-latest
     steps:
-#      - name: Branch Name job
-#        id: branch-name
-#        uses: ./.github/workflows/cache-branch.yml
-#        with:
-#          branches: ${{ github.event.inputs.branches  }}
-      - name: Branch name
-        run: |
-          X=$(cat branch_info.txt)
-          echo "name=${{env.TMP_BRANCH_NAME}} x=X"
+      - name: Branch Name job
+        id: branch-name
+        uses: ./.github/workflows/cache-branch.yml
+        with:
+          branches: ${{ github.event.inputs.branches  }}
 
       - name: Checkout code
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
       - name: Branch Merge
         id: branch-merge
         uses: ./.github/workflows/merge-branch.yml
