--- a/.github/workflows/cache-branch.yml
+++ b/.github/workflows/cache-branch.yml
@@ -21,6 +21,9 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Set output message
+        run: echo "OUTPUT_MESSAGE=${{ inputs.message }} from Job A" >> $GITHUB_ENV
+
       - name: Set Git user information
         if: inputs.branches != ''
         run: |
