--- a/.github/workflows/cache-branch.yml
+++ b/.github/workflows/cache-branch.yml
@@ -22,7 +22,7 @@ jobs:
           fetch-depth: 0
 
       - name: Set output message
-        run: echoecho "output_message=${{ inputs.branches }} from Job A" >> $GITHUB_OUTPUT
+        run: echo "output_message=${{ inputs.branches }} from Job A" >> $GITHUB_OUTPUT
 
       - name: Set Git user information
         if: inputs.branches != ''
