--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,10 @@ jobs:
     uses: ./.github/workflows/cache-branch.yml
     with:
       branches: ${{ github.event.inputs.branches  }}
+  merge_branches:
+    uses: ./.github/workflows/merge-branch.yml
+    with:
+      branches: ${{ github.event.inputs.branches  }}
 #    outputs:
 #      TMP_BRANCH_NAME: ${{ jobs.multiple-branches.outputs.TMP_BRANCH_NAME }}
 
@@ -202,12 +206,9 @@ jobs:
           echo "TMP_BRANCH=$branch" >> $GITHUB_ENV
           echo "TMP_BRANCH=$branch"
 
-      - name: Branch Merge
-        id: branch-merge
-        uses: ./.github/workflows/merge-branch.yml
-        with:
-          branches: ${{ github.event.inputs.branches  }}
-          final-branch-name: ${{ env.TMP_BRANCH  }}
+      - name: Read branch
+        run: |
+          git branch
 
 #      - name: Check Out Target Branch
 #        run: |
