--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -210,6 +210,8 @@ jobs:
       - name: Read branch
         run: |
           git branch
+          echo "The source branch is ${{ github.head_ref }}"
+          echo "The target branch is ${{ github.base_ref }}"
 
 #      - name: Check Out Target Branch
 #        run: |
