--- a/.github/workflows/cache-branch.yml
+++ b/.github/workflows/cache-branch.yml
@@ -38,7 +38,9 @@ jobs:
           git branch
           if [ "${{ inputs.branches }}" == "" ]; then
             $branch_name=''
-            jq --arg currnent "$branch_name" '.current_branch = $currnent' ${{ env.BRANCH_JSON }} > temp.json && mv temp.json ${{ env.BRANCH_JSON }}
+            jq --arg currnent "$branch_name" '.current_branch = $currnent' ${{ env.BRANCH_JSON }} > temp.json
+            time=$(date +%Y-%m-%d\ %H:%M:%S)
+            jq --arg time "$time" '.time = $time'  temp.json  > temp1.json && mv temp1.json ${{ env.BRANCH_JSON }}
             git commit -a -m "Tmp Branch $branch_name"
             git push
           fi
