--- a/.github/workflows/cache-branch.yml
+++ b/.github/workflows/cache-branch.yml
@@ -37,7 +37,7 @@ jobs:
           git checkout -b multiple-branch-info origin/multiple-branch-info
           git branch
           if [ "${{ inputs.branches }}" == "" ]; then
-            $branch_name=''
+            branch_name=''
             jq --arg currnent "$branch_name" '.current_branch = $currnent' ${{ env.BRANCH_JSON }} > temp.json
             time=$(date +%Y-%m-%d\ %H:%M:%S)
             jq --arg time "$time" '.time = $time'  temp.json  > temp1.json && mv temp1.json ${{ env.BRANCH_JSON }}
