--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -206,7 +206,9 @@ jobs:
           branch=$(jq -r '.current_branch' ${{ env.BRANCH_JSON }})
           echo "TMP_BRANCH=$branch" >> $GITHUB_ENV
           echo "TMP_BRANCH=$branch"
-          git checkout -b ${GITHUB_REF#refs/heads/} origin/${GITHUB_REF#refs/heads/}
+          if [ $branch != "" ]; then
+            git checkout -b ${GITHUB_REF#refs/heads/} origin/${GITHUB_REF#refs/heads/}
+          fi
 
       - name: Read branch
         run: |
