--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -206,9 +206,7 @@ jobs:
           branch=$(jq -r '.current_branch' ${{ env.BRANCH_JSON }})
           echo "TMP_BRANCH=$branch" >> $GITHUB_ENV
           echo "TMP_BRANCH=$branch"
-          if [ $branch != "" ]; then
-            git checkout -b ${GITHUB_REF#refs/heads/} origin/${GITHUB_REF#refs/heads/}
-          fi
+          git checkout ${GITHUB_REF#refs/heads/}
 
       - name: Read branch
         run: |
@@ -218,16 +216,16 @@ jobs:
           echo "The target branch is ${{ github.ref }}"
           echo "The target branch is ${GITHUB_REF#refs/heads/}"
 
-#      - name: Check Out Target Branch
-#        run: |
-#          if [ "${{ steps.branch-name.outputs.final_branch_name }}" == '' ]; then
-#            git_hash=$(git rev-parse --short HEAD)
-#            echo "GIT_SHORT_SHA=$git_hash" >> $GITHUB_ENV
-#            echo "GIT_BRANCH=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
-#            echo "one branch ${GITHUB_REF#refs/heads/}"
-#          else
-#            git_hash=$(git rev-parse --short origin/${{ env.steps.branch-merge.outputs. }})
-#            echo "GIT_SHORT_SHA=$git_hash" >> $GITHUB_ENV
-#            echo "GIT_BRANCH=${{ env.TMP_BRANCH_NAME }}" >> $GITHUB_ENV
-#            echo "multiple branch ${{ env.TMP_BRANCH_NAME }}"
-#          fi
+      - name: Check Out Target Branch
+        run: |
+          if [ "${{ env.TMP_BRANCH }}" == '' ]; then
+            git_hash=$(git rev-parse --short HEAD)
+            echo "GIT_SHORT_SHA=$git_hash" >> $GITHUB_ENV
+            echo "GIT_BRANCH=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
+            echo "one branch ${GITHUB_REF#refs/heads/}"
+          else
+            git_hash=$(git rev-parse --short origin/${{ env.TMP_BRANCH }})
+            echo "GIT_SHORT_SHA=$git_hash" >> $GITHUB_ENV
+            echo "GIT_BRANCH=${{ env.TMP_BRANCH }}" >> $GITHUB_ENV
+            echo "multiple branch ${{ env.TMP_BRANCH }}"
+          fi
