--- a/.github/workflows/cache-branch.yml
+++ b/.github/workflows/cache-branch.yml
@@ -12,19 +12,14 @@ jobs:
   multiple-branches:
     outputs:
       final_branch_name: "aaa ${{ steps.final-branch-name.outputs.final_branch_name }}"
-      output_message: "out ${{ steps.msg.outputs.output_message }}"
     env:
       BRANCH_JSON: './multiple_branch.json'
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Set output message
-        id: msg
-        run: echo "output_message=${{ inputs.branches }} from Job A" >> $GITHUB_OUTPUT
+        uses: actions/checkout@v4
 
       - name: Set Git user information
         run: |
@@ -33,8 +28,8 @@ jobs:
 
       - name: Git checkout multiple-branch-info
         run: |
+          git fetch origin
           git checkout -b multiple-branch-info origin/multiple-branch-info
-          git branch
           if [ "${{ inputs.branches }}" == "" ]; then
             branch_name=''
             jq --arg currnent "$branch_name" '.current_branch = $currnent' ${{ env.BRANCH_JSON }} > temp.json
@@ -63,7 +58,7 @@ jobs:
           IFS=' ' read -r -a branch_array <<< "$branches"
           declare -A unique_branches
           for branch in "${branch_array[@]}"; do
-            sanitized_branch="${branch//\//-}"
+            sanitized_branch="${branch//\//_}"
             unique_branches["$sanitized_branch"]=1
           done
           unique_branch_array=()
@@ -83,12 +78,12 @@ jobs:
         id: read-cache
         run: |
           echo "Reading branch info from JSON file..."
-          git branch
-          branch_info=$(jq -r '.${{ steps.branches-sort.outputs.asc_branch_name }}' ${{ env.BRANCH_JSON }})
+          branch_info=$(jq -r '."${{ steps.branches-sort.outputs.asc_branch_name }}"' ${{ env.BRANCH_JSON }})
           echo "Raw branch_info: $branch_info"
           if [ "$branch_info" = "null" ]; then
             echo "branch_name=''" >> $GITHUB_OUTPUT
             echo 'not find branch_info'
+            echo "generate='1'" >> $GITHUB_ENV
           else
             branch_name=$(echo "$branch_info" | jq -r '.branch_name')
             echo "branch_name=${branch_name}" >> $GITHUB_OUTPUT
@@ -99,12 +94,13 @@ jobs:
             git status
             git commit -a -m "Tmp Branch $branch_name"
             git push
+            echo "generate=''" >> $GITHUB_ENV
           fi
           echo "$branch_name"
 
       - name: Generate temporary branch name
         id: generate-branch-name
-        if: steps.read-cache.outputs.branch_name == '' && inputs.branches != ''
+        if: ${{ env.generate != '' }}
         run: |
           timestamp=$(date +%s)
           time=$(date +%Y-%m-%d\ %H:%M:%S)
@@ -114,7 +110,7 @@ jobs:
           BRANCH_INFO="{ \"branch_name\": \"${branch_name}\", \"time\": \"${time}\", \"timestamp\": ${timestamp} }"
           echo "$BRANCH_INFO"
           jq --arg key "$asc_branch_name" --argjson new_info "$BRANCH_INFO" '.[ $key ] = $new_info' ${{ env.BRANCH_JSON }} > temp.json
-          jq --arg currnent "$asc_branch_name" '.current_branch = $currnent' temp.json > temp1.json
+          jq --arg currnent "$branch_name" '.current_branch = $currnent' temp.json > temp1.json
           mv temp1.json ${{ env.BRANCH_JSON }}
           echo "new_branch_name=tmp/tmp_${timestamp}" >> "$GITHUB_OUTPUT"
           git commit -a -m "Tmp Branch $branch_name"
@@ -123,6 +119,7 @@ jobs:
       - name: Create temporary branch
         if: steps.generate-branch-name.outputs.new_branch_name != '' && inputs.branches != ''
         run: |
+          git fetch origin
           git checkout -b ${{ steps.generate-branch-name.outputs.new_branch_name }} origin/${GITHUB_REF#refs/heads/}
           git push -u origin ${{ steps.generate-branch-name.outputs.new_branch_name }}
 
