--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,11 +18,15 @@ on:
 jobs:
   multiple_branches:
     uses: ./.github/workflows/cache-branch.yml
+    permissions:
+      contents: write
     with:
       branches: ${{ github.event.inputs.branches  }}
   merge_branches:
     needs: multiple_branches
     uses: ./.github/workflows/merge-branch.yml
+    permissions:
+      contents: write
     with:
       branches: ${{ github.event.inputs.branches  }}
 
