--- a/.github/workflows/cache-branch.yml
+++ b/.github/workflows/cache-branch.yml
@@ -83,7 +83,7 @@ jobs:
           if [ "$branch_info" = "null" ]; then
             echo "branch_name=''" >> $GITHUB_OUTPUT
             echo 'not find branch_info'
-            echo "generate='1'" >> $GITHUB_ENV
+            echo "generate=1" >> $GITHUB_ENV
           else
             branch_name=$(echo "$branch_info" | jq -r '.branch_name')
             echo "branch_name=${branch_name}" >> $GITHUB_OUTPUT
@@ -94,7 +94,7 @@ jobs:
             git status
             git commit -a -m "Tmp Branch $branch_name"
             git push
-            echo "generate=''" >> $GITHUB_ENV
+            echo "generate=" >> $GITHUB_ENV
           fi
           echo "$branch_name"
 
