--- a/.github/workflows/cache-branch.yml
+++ b/.github/workflows/cache-branch.yml
@@ -88,13 +88,20 @@ jobs:
             branch_name=$(echo "$branch_info" | jq -r '.branch_name')
             echo "branch_name=${branch_name}" >> $GITHUB_OUTPUT
             echo "find branch_info $branch_info $branch_name"
-            jq --arg currnent "$branch_name" '.current_branch = $currnent' ${{ env.BRANCH_JSON }} > temp.json 
-            time=$(date +%Y-%m-%d\ %H:%M:%S)
-            jq --arg time "$time" '.time = $time'  temp.json  > temp1.json && mv temp1.json ${{ env.BRANCH_JSON }}
-            git status
-            git commit -a -m "Tmp Branch $branch_name"
-            git push
-            echo "generate=" >> $GITHUB_ENV
+            had_branch=git ls-remote --heads origin | grep -q "refs/heads/$branch_name"
+            if [ $had_branch -eq 0 ]; then
+              echo "远程分支存在"
+              jq --arg currnent "$branch_name" '.current_branch = $currnent' ${{ env.BRANCH_JSON }} > temp.json 
+              time=$(date +%Y-%m-%d\ %H:%M:%S)
+              jq --arg time "$time" '.time = $time'  temp.json  > temp1.json && mv temp1.json ${{ env.BRANCH_JSON }}
+              git status
+              git commit -a -m "Tmp Branch $branch_name"
+              git push
+              echo "generate=1" >> $GITHUB_ENV
+            else
+              echo "远程分支不存在"
+              echo "generate=" >> $GITHUB_ENV
+            fi
           fi
           echo "$branch_name"
 
