--- a/.github/workflows/cache-branch.yml
+++ b/.github/workflows/cache-branch.yml
@@ -88,8 +88,8 @@ jobs:
             branch_name=$(echo "$branch_info" | jq -r '.branch_name')
             echo "branch_name=${branch_name}" >> $GITHUB_OUTPUT
             echo "find branch_info $branch_info $branch_name"
-            had_branch=git ls-remote --heads origin | grep -q "refs/heads/$branch_name"
-            if [ $had_branch -eq 0 ]; then
+            git ls-remote --heads origin | grep -q "refs/heads/$branch_name"
+            if [ $? -eq 0 ]; then
               echo "远程分支存在"
               jq --arg currnent "$branch_name" '.current_branch = $currnent' ${{ env.BRANCH_JSON }} > temp.json 
               time=$(date +%Y-%m-%d\ %H:%M:%S)
